# libvideo-encode

./: CMakeLists.txt  README.md  atom.mk  config.in
core/include/video-encode/: venc_core.h  venc_h264.h  venc_h265.h  venc_internal.h
core/src/: venc_core.c  venc_core_priv.h  venc_h264.c  venc_h265.c
ffmpeg/include/video-encode/: venc_ffmpeg.h
ffmpeg/src/: venc_ffmpeg.c  venc_ffmpeg_convert.c  venc_ffmpeg_convert.h  venc_ffmpeg_priv.h
include/video-encode/: venc.h
mediacodec/include/video-encode/: venc_mediacodec.h
mediacodec/src/: venc_mediacodec.c  venc_mediacodec_convert.h  venc_mediacodec_priv.h
png/include/video-encode/: venc_png.h
png/src/: venc_png.c  venc_png_priv.h
src/: venc.c  venc_priv.h
tools/: venc.c
turbojpeg/include/video-encode/: venc_turbojpeg.h
turbojpeg/src/: venc_turbojpeg.c  venc_turbojpeg_priv.h
videotoolbox/include/video-encode/: venc_videotoolbox.h
videotoolbox/src/: venc_videotoolbox.c  venc_videotoolbox_convert.h  venc_videotoolbox_priv.h
x264/include/video-encode/: venc_x264.h
x264/src/: venc_x264.c  venc_x264_priv.h
x265/include/video-encode/: venc_x265.h
x265/src/: venc_x265.c  venc_x265_priv.h
